# physics-engine

./: pyproject.toml
src/physics_engine/: AnimatedPlot.py  Particle.py  ParticleForceRegistry.py  Simulation.py  __main__.py
src/physics_engine/force/: DragForce.py  GravityForce.py  IForce.py  SpringForce.py
