[project]
name = "physics-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FelipePassarela", email = "126916744+FelipePassarela@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pyglm>=2.8.3",
]

[project.scripts]
physics-engine = "physics_engine.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstrument>=5.1.2",
]
